[tool.pdm.build]
includes = [
    "brain_games",
]

[project]
authors = [
    {name = "Dima Minakov", email = "vano25071993@yandex.ru"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "prompt<1.0.0,>=0.4.1",
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]
